// Copyright 2024 The Pigweed Authors
//
// Licensed under the Apache License, Version 2.0 (the "License"); you may not
// use this file except in compliance with the License. You may obtain a copy of
// the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
// WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
// License for the specific language governing permissions and limitations under
// the License.
syntax = "proto3";

package board;

import "pw_protobuf_protos/common.proto";

service Board {
  rpc Reboot(RebootRequest) returns (pw.protobuf.Empty);

  rpc OnboardTemp(pw.protobuf.Empty) returns (OnboardTempResponse);
  rpc OnboardTempStream(OnboardTempStreamRequest)
      returns (stream OnboardTempResponse);
}

message RebootType {
  enum Enum {
    UNKNOWN = 0;
    BOTH_MASS_STORAGE_AND_PICOBOOT = 1;
    PICOBOOT_ONLY = 2;
    MASS_STORAGE_ONLY = 3;
  };
}

message RebootRequest {
  RebootType.Enum reboot_type = 1;  // Required
}

message OnboardTempResponse {
  float temp = 1;
}

message OnboardTempStreamRequest {
  // The interval at which to sample the temperature sensor. Minimum 100ms.
  uint32 sample_interval_ms = 1;
}
