// Copyright 2024 The Pigweed Authors
//
// Licensed under the Apache License, Version 2.0 (the "License"); you may not
// use this file except in compliance with the License. You may obtain a copy of
// the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
// WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
// License for the specific language governing permissions and limitations under
// the License.
syntax = "proto3";

package morse_code;

import "pw_protobuf_protos/common.proto";

service MorseCode {
  rpc Send(SendRequest) returns (pw.protobuf.Empty);
}

message SendRequest {
  // The message to send in Morse code using the on-board LED.
  // Maximum length is 256 characters.
  string msg = 1;

  // The number of times to repeat the message.
  // If unset, sends once.
  // If 0, repeats forever.
  optional uint32 repeat = 2;

  // The duration of one "dit", in milliseconds.
  // The duration of a "dah" three times this interval.
  // Minimum is 10 ms, anything smaller will be increased to that value.
  // If unset, defaults to 100 ms.
  optional uint32 interval_ms = 3;
}

// SendRequest.msg max_size:256
